# keyof

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/keyof/: __init__.py  keyof.py
tests/: test_keyof.py
